# backend/routes/api.php
@@ -3,7 +3,7 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\TestController;
 use App\Http\Controllers\AuthController;
-
+use App\Http\Controllers\CountryController;
 Route::middleware('throttle:api')->group(function () {
 
     Route::get('/test', [TestController::class, 'ping']);
@@ -17,3 +17,4 @@ Route::prefix('auth')->group(function () {
     // Route::post('refresh', [AuthController::class, 'refresh']);
     // Route::post('set-password', [AuthController::class, 'setPassword']);
 });
+Route::get('/countries', [CountryController::class, 'index']);
